[tool.poetry]
name = "re-env0-toolbox"
version = "0.1.0"
description = ""
authors = ["Igor Malinovskyi <igor.malinovskiy@redis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
setuptools = "^69.5.1"
backoff = "^2.2.1"
env0-client = {path = "deps/env0_client", develop = true}
requests = "^2.31.0"

[tool.poetry.scripts]
re-env0 = "re_env0.main:run_cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
