[tool.poetry]
name = "re-env0"
version = "0.1.7"
description = ""
authors = ["Igor Malinovskyi <igor.malinovskiy@redis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "0.15.4"
env0-client = {path = "deps/env0_client"}
re-utils = {path = "deps/re_utils", develop = true}

[tool.poetry.scripts]
re-env0 = "re_env0.main:run_cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
